OAKHILL/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance__c</fullName>
        <label>Compliance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Opportunity__c</fullName>
        <formula>HYPERLINK(&quot;/006/e?retURL=%2F006%2Fo&amp;RecordType=012i0000001AGu3&amp;ent=Opportunity&amp;opp4_lkid =Task.What&amp;Task.Organization__c&quot;, &quot;Create Opportunity&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Families__c</fullName>
        <label>Fund Families</label>
        <picklist>
            <picklistValues>
                <fullName>Oak Hill Credit Alpha Fund (OHCAF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OHCOF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OHSOF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OHDCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OHESCF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OHA Newbury Partners (Newbury)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OHA Strategic Credit Fund (OHSCF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OHSCF II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OHA Structured Products Fund (OHSPF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OHSPFB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OHSPFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separate Accounts</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fund_Opportunity__c</fullName>
        <label>Fund Opportunity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <externalId>true</externalId>
        <label>ParentId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_Description__c</fullName>
        <label>Presentation Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_Used__c</fullName>
        <label>Presentation Used</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategy_Opportunity__c</fullName>
        <label>Strategy Opportunity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <label>Strategies</label>
        <picklist>
            <picklistValues>
                <fullName>Strategy 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy 2</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <picklist>
            <picklistValues>
                <fullName>Oak Hill</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isFollowUp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To recognize the follow up activity.</description>
        <label>isFollowUp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isParent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isParent</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>Proj_Team_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.TYPE</field>
            <operation>equals</operation>
            <value>CRM Project</value>
        </filters>
        <label>Project Team Tasks</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Team</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>